--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -146,7 +146,11 @@ body {
 	font-size: 20px;
 	margin: 0 0 5px 0;
     padding: 5px 15px;
-	color: $btn-text;
+
+	a {
+		color: $btn-text;
+		text-decoration: none;
+	}
 
 	// everything above an iphone 4/5
 	@media (min-width: 321px) {
@@ -477,6 +481,7 @@ header {
 
 .park-selected-official {
 	border: 4px solid $btn-text !important;
+	opacity: 1;
 
 	@media all and (min-width: $screen-sm) {
 		border: 6px solid $btn-text !important;
@@ -491,7 +496,7 @@ header {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin-top: -45px;
+	margin-top: -44px;
 	color: $btn-text;
 	opacity: 0;
 	@include transformGeneral(scale( .5, .5 ));
