--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -181,6 +181,9 @@ header {
 .sub-header-cont {
 	@extend .header-cont;
 	padding: 10px 10px;
+	h2, h3 {
+		color: #827a6c;
+	}
 }
 
 .title {
@@ -235,6 +238,8 @@ header {
 	z-index         : 1;
 	cursor          : pointer;
 	font-weight     : bold;
+	@include transitionStyle(all, .1s, ease-in-out);
+
 
 	&:active {
 		opacity: .8;
@@ -270,9 +275,10 @@ header {
 	z-index         : 1;
 	cursor          : pointer;
 	font-weight     : bold;
+	@include transitionStyle(all, .1s, ease-in-out);
 
 	&:active {
-		opacity: .8;
+		opacity: .3;
 	}
 }
 
@@ -497,7 +503,7 @@ header {
 	right: 0;
 	bottom: 0;
 	margin-top: -44px;
-	color: $btn-text;
+	color: $light-main;
 	opacity: 0;
 	@include transformGeneral(scale( .5, .5 ));
 }
@@ -755,7 +761,7 @@ footer {
 
 
 .zoom-check {
-	@include animationFunc( zoomAni, .8s, forwards );
+	@include animationFunc( zoomAni, .70s, forwards );
 }
 
 .zoom-check-reverse {
@@ -792,10 +798,14 @@ footer {
 	-moz-transform: perspective(200px) translateZ(0);
 	-o-transform: perspective(200px) translateZ(0);
 	transform: perspective(200px) translateZ(0);
+	-webkit-perspective: 200px;
+  	-moz-perspective: 200px;
+ 	perspective: 200px;
 }
 
 .li-click-text {
-	@include animationFunc( liButtonClickText, 1s, forwards);
+	@include animationFunc( liButtonClickText, 4.6s, forwards);
+	@include transformGeneral(scale3d(1,1,1));
 	-webkit-animation-timing-function: ease-out;
 	-moz-animation-timing-function: ease-out;
 	-o-animation-timing-function: ease-out;
@@ -804,6 +814,9 @@ footer {
 	-moz-transform: perspective(200px) translateZ(0);
 	-o-transform: perspective(200px) translateZ(0);
 	transform: perspective(200px) translateZ(0);
+	-webkit-perspective: 200px;
+  	-moz-perspective: 200px;
+ 	perspective: 200px;
 }
 
 .top-leaf {
@@ -896,49 +909,65 @@ footer {
 
 @keyframes liButtonClickText {
     0% {
+    	transform: scale3d(1,1,1);
 		opacity: 1;
     }
-    50% {
-    	opacity: .3;
+    5% {
+    	transform: scale3d(1.08,1.08,1);
+    	opacity: .2;
+    }
+    10% {
+    	transform: scale3d(1,1,1);
+		opacity: .2;
     }
     100% {
     	opacity: 1;
+    	transform: scale3d(1,1,1);
     }
 }
 
 @-webkit-keyframes liButtonClickText {
     0% {
+    	-webkit-transform: scale3d(1,1,1);
 		opacity: 1;
     }
     50% {
-    	opacity: .5;
+    	-webkit-transform: scale3d(1.08,1.08,1);
+    	opacity: .3;
     }
     100% {
     	opacity: 1;
+    	-webkit-transform: scale3d(1,1,1);
     }
 }
 
 @-moz-keyframes liButtonClickText {
     0% {
+    	-moz-transform: scale3d(1,1,1);
 		opacity: 1;
     }
     50% {
-    	opacity: .5;
+    	-moz-transform: scale3d(1.08,1.08,1);
+    	opacity: .3;
     }
     100% {
     	opacity: 1;
+    	-moz-transform: scale3d(1,1,1);
     }
 }
 
 @-o-keyframes liButtonClickText {
     0% {
+    	-o-transform: scale3d(1,1,1);
 		opacity: 1;
     }
     50% {
-    	opacity: .5;
+    	-o-transform: scale3d(1.08,1.08,1);
+    	opacity: .3;
     }
     100% {
     	opacity: 1;
+    	-o-transform: scale3d(1,1,1);
     }
 }
 
@@ -991,7 +1020,7 @@ footer {
 		-webkit-transform: scale( 0, 0 ) rotate( 0deg );
     }
     50% {
-		-webkit-transform: scale( 1.1, 1.1 ) rotate( 360deg );
+		-webkit-transform: scale( 1.2, 1.2 ) rotate( 360deg );
     }
     100% {
 		-webkit-transform: scale( 1, 1 ) rotate( 360deg );
@@ -1003,7 +1032,7 @@ footer {
 		transform: scale( 0, 0 ) rotate( 0deg );
     }
     50% {
-		transform: scale( 1.1, 1.1 ) rotate( 360deg );
+		transform: scale( 1.2, 1.2 ) rotate( 360deg );
     }
     100% {
 		transform: scale( 1, 1 ) rotate( 360deg );
@@ -1015,7 +1044,7 @@ footer {
 		-moz-transform: scale( 0, 0 ) rotate( 0deg );
     }
     50% {
-		-moz-transform: scale( 1.1, 1.1 ) rotate( 360deg );
+		-moz-transform: scale( 1.2, 1.2 ) rotate( 360deg );
     }
     100% {
 		-moz-transform: scale( 1, 1 ) rotate( 360deg );
@@ -1027,7 +1056,7 @@ footer {
 		-o-transform: scale( 0, 0 ) rotate( 0deg );
     }
     50% {
-		-o-transform: scale( 1.1, 1.1 ) rotate( 360deg );
+		-o-transform: scale( 1.2, 1.2 ) rotate( 360deg );
     }
     100% {
 		-o-transform: scale( 1, 1 ) rotate( 360deg );
