adding uber deep link

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -142,7 +142,7 @@ body {
 	}
 }
 
-#park-info-directions {
+#park-info-etc {
 	font-size: 20px;
 	margin: 0 0 5px 0;
     padding: 5px 15px;
@@ -710,6 +710,10 @@ header {
 	color: $dark-main;
 	width: 16px;
 	text-align: center;
+}
+
+.image-bullet-point {
+	width: 16px;
 }
 
 footer {
