--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8860,19 +8860,19 @@ body {
 }
 
 /* line 145, ../sass/app.scss */
-#park-info-directions {
+#park-info-etc {
   font-size: 20px;
   margin: 0 0 5px 0;
   padding: 5px 15px;
 }
 /* line 150, ../sass/app.scss */
-#park-info-directions a {
+#park-info-etc a {
   color: #502d07;
   text-decoration: none;
 }
 @media (min-width: 321px) {
   /* line 145, ../sass/app.scss */
-  #park-info-directions {
+  #park-info-etc {
     margin: 10px 0 10px 0;
   }
 }
@@ -9537,6 +9537,11 @@ header {
 }
 
 /* line 715, ../sass/app.scss */
+.image-bullet-point {
+  width: 16px;
+}
+
+/* line 719, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9544,7 +9549,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 727, ../sass/app.scss */
+/* line 731, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9554,7 +9559,7 @@ footer {
   opacity: 0;
 }
 
-/* line 732, ../sass/app.scss */
+/* line 736, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9564,17 +9569,17 @@ footer {
   opacity: 1;
 }
 
-/* line 737, ../sass/app.scss */
+/* line 741, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 741, ../sass/app.scss */
+/* line 745, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 745, ../sass/app.scss */
+/* line 749, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9585,7 +9590,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 751, ../sass/app.scss */
+/* line 755, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9597,7 +9602,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 763, ../sass/app.scss */
+/* line 767, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.7s forwards;
   -moz-animation: zoomAni 0.7s forwards;
@@ -9606,7 +9611,7 @@ footer {
   animation: zoomAni 0.7s forwards;
 }
 
-/* line 767, ../sass/app.scss */
+/* line 771, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9615,7 +9620,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 771, ../sass/app.scss */
+/* line 775, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9624,7 +9629,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 775, ../sass/app.scss */
+/* line 779, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9633,7 +9638,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 779, ../sass/app.scss */
+/* line 783, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9642,7 +9647,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 783, ../sass/app.scss */
+/* line 787, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9655,7 +9660,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 791, ../sass/app.scss */
+/* line 795, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 0.5s forwards;
   -moz-animation: fadeInAndUp 0.5s forwards;
@@ -9668,7 +9673,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.08, 1.27);
 }
 
-/* line 799, ../sass/app.scss */
+/* line 803, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9684,7 +9689,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 810, ../sass/app.scss */
+/* line 814, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 4.6s forwards;
   -moz-animation: liButtonClickText 4.6s forwards;
@@ -9709,7 +9714,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 826, ../sass/app.scss */
+/* line 830, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9719,7 +9724,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 831, ../sass/app.scss */
+/* line 835, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9729,7 +9734,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 836, ../sass/app.scss */
+/* line 840, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9739,7 +9744,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 841, ../sass/app.scss */
+/* line 845, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9749,7 +9754,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 846, ../sass/app.scss */
+/* line 850, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
