--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8877,35 +8877,40 @@ body {
   }
 }
 
+/* line 162, ../sass/app.scss */
+#park-info-phonenumber a {
+  color: #ababab;
+}
+
 /* GENERAL CLASSES */
-/* line 165, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 header {
   margin: 40px 30px;
 }
 
-/* line 169, ../sass/app.scss */
+/* line 175, ../sass/app.scss */
 .header-cont, .sub-header-cont {
   width: 640px;
   max-width: 100%;
   margin: 0 auto;
 }
-/* line 174, ../sass/app.scss */
+/* line 180, ../sass/app.scss */
 .header-cont svg, .sub-header-cont svg {
   width: 50px;
   height: 50px;
   float: left;
 }
 
-/* line 181, ../sass/app.scss */
+/* line 187, ../sass/app.scss */
 .sub-header-cont {
   padding: 10px 10px;
 }
-/* line 184, ../sass/app.scss */
+/* line 190, ../sass/app.scss */
 .sub-header-cont h2, .sub-header-cont h3 {
   color: #827a6c;
 }
 
-/* line 189, ../sass/app.scss */
+/* line 195, ../sass/app.scss */
 .title {
   letter-spacing: 2px;
   font-weight: 700;
@@ -8921,7 +8926,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 189, ../sass/app.scss */
+  /* line 195, ../sass/app.scss */
   .title {
     font-size: 36px;
     padding: 0 0 0 30px;
@@ -8929,7 +8934,7 @@ header {
   }
 }
 
-/* line 207, ../sass/app.scss */
+/* line 213, ../sass/app.scss */
 .sub-title {
   letter-spacing: 1px;
   font-size: 23px;
@@ -8941,13 +8946,13 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 207, ../sass/app.scss */
+  /* line 213, ../sass/app.scss */
   .sub-title {
     font-size: 30px;
   }
 }
 
-/* line 219, ../sass/app.scss */
+/* line 225, ../sass/app.scss */
 .description {
   font-size: 16px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8957,7 +8962,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 224, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 15px;
@@ -8981,11 +8986,11 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 244, ../sass/app.scss */
+/* line 250, ../sass/app.scss */
 .reset-btn:active {
   opacity: .3;
 }
-/* line 248, ../sass/app.scss */
+/* line 254, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -8993,13 +8998,13 @@ header {
   top: 2px;
 }
 
-/* line 256, ../sass/app.scss */
+/* line 262, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 35%;
 }
 
-/* line 261, ../sass/app.scss */
+/* line 267, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 15px;
@@ -9023,12 +9028,12 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 280, ../sass/app.scss */
+/* line 286, ../sass/app.scss */
 .fire-btn:active {
   opacity: .3;
 }
 
-/* line 285, ../sass/app.scss */
+/* line 291, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9044,7 +9049,7 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 300, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9061,17 +9066,17 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 316, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 320, ../sass/app.scss */
+/* line 326, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 325, ../sass/app.scss */
+/* line 331, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -9079,14 +9084,14 @@ header {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 325, ../sass/app.scss */
+  /* line 331, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 338, ../sass/app.scss */
+/* line 344, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9094,7 +9099,7 @@ header {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 338, ../sass/app.scss */
+  /* line 344, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9103,7 +9108,7 @@ header {
     display: inline-block;
   }
 }
-/* line 352, ../sass/app.scss */
+/* line 358, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9121,21 +9126,21 @@ header {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 368, ../sass/app.scss */
+  /* line 374, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 372, ../sass/app.scss */
+  /* line 378, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 375, ../sass/app.scss */
+  /* line 381, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 383, ../sass/app.scss */
+/* line 389, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
@@ -9147,20 +9152,20 @@ header {
   background-position: left center;
   background-repeat: no-repeat;
 }
-/* line 389, ../sass/app.scss */
+/* line 395, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 392, ../sass/app.scss */
+/* line 398, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 396, ../sass/app.scss */
+/* line 402, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 401, ../sass/app.scss */
+/* line 407, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9176,7 +9181,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 412, ../sass/app.scss */
+/* line 418, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9186,25 +9191,25 @@ header {
   background-color: #fff;
 }
 
-/* line 421, ../sass/app.scss */
+/* line 427, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 426, ../sass/app.scss */
+/* line 432, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 426, ../sass/app.scss */
+  /* line 432, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 435, ../sass/app.scss */
+/* line 441, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9213,12 +9218,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 435, ../sass/app.scss */
+  /* line 441, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 446, ../sass/app.scss */
+/* line 452, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9239,13 +9244,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 446, ../sass/app.scss */
+  /* line 452, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 466, ../sass/app.scss */
+/* line 472, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9254,7 +9259,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 471, ../sass/app.scss */
+/* line 477, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9265,24 +9270,24 @@ header {
   color: #502d07;
 }
 
-/* line 484, ../sass/app.scss */
+/* line 490, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 488, ../sass/app.scss */
+/* line 494, ../sass/app.scss */
 .park-selected-official {
   border: 4px solid #502d07 !important;
   opacity: 1;
 }
 @media all and (min-width: 768px) {
-  /* line 488, ../sass/app.scss */
+  /* line 494, ../sass/app.scss */
   .park-selected-official {
     border: 6px solid #502d07 !important;
   }
 }
 
-/* line 497, ../sass/app.scss */
+/* line 503, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9301,23 +9306,23 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 511, ../sass/app.scss */
+/* line 517, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 515, ../sass/app.scss */
+/* line 521, ../sass/app.scss */
 .park-info-cont ul {
   padding: 0 15px;
   margin: 0;
   color: #502d07;
 }
-/* line 520, ../sass/app.scss */
+/* line 526, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 527, ../sass/app.scss */
+/* line 533, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9325,12 +9330,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 527, ../sass/app.scss */
+  /* line 533, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 537, ../sass/app.scss */
+/* line 543, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9340,28 +9345,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 537, ../sass/app.scss */
+  /* line 543, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 549, ../sass/app.scss */
+/* line 555, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 553, ../sass/app.scss */
+/* line 559, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 553, ../sass/app.scss */
+  /* line 559, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 563, ../sass/app.scss */
+/* line 569, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9376,7 +9381,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 577, ../sass/app.scss */
+/* line 583, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9385,7 +9390,7 @@ header {
   bottom: 0;
 }
 
-/* line 585, ../sass/app.scss */
+/* line 591, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9404,24 +9409,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 585, ../sass/app.scss */
+  /* line 591, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 607, ../sass/app.scss */
+/* line 613, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 607, ../sass/app.scss */
+  /* line 613, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 617, ../sass/app.scss */
+/* line 623, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9430,7 +9435,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 627, ../sass/app.scss */
+/* line 633, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9445,7 +9450,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 637, ../sass/app.scss */
+/* line 643, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9455,7 +9460,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 647, ../sass/app.scss */
+/* line 653, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9467,18 +9472,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 654, ../sass/app.scss */
+/* line 660, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: 60px;
 }
-/* line 659, ../sass/app.scss */
+/* line 665, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 664, ../sass/app.scss */
+/* line 670, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9489,7 +9494,7 @@ header {
   opacity: 0;
 }
 
-/* line 678, ../sass/app.scss */
+/* line 684, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9504,7 +9509,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 688, ../sass/app.scss */
+/* line 694, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9514,7 +9519,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 698, ../sass/app.scss */
+/* line 704, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: 35px;
@@ -9529,21 +9534,21 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 709, ../sass/app.scss */
+/* line 715, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 715, ../sass/app.scss */
+/* line 721, ../sass/app.scss */
 .image-bullet-point {
   width: 16px;
   margin-left: 10px;
   margin-top: -3px;
 }
 
-/* line 721, ../sass/app.scss */
+/* line 727, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9551,7 +9556,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 733, ../sass/app.scss */
+/* line 739, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9561,7 +9566,7 @@ footer {
   opacity: 0;
 }
 
-/* line 738, ../sass/app.scss */
+/* line 744, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9571,17 +9576,17 @@ footer {
   opacity: 1;
 }
 
-/* line 743, ../sass/app.scss */
+/* line 749, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 747, ../sass/app.scss */
+/* line 753, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 751, ../sass/app.scss */
+/* line 757, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9592,7 +9597,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 757, ../sass/app.scss */
+/* line 763, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9604,7 +9609,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 769, ../sass/app.scss */
+/* line 775, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.7s forwards;
   -moz-animation: zoomAni 0.7s forwards;
@@ -9613,7 +9618,7 @@ footer {
   animation: zoomAni 0.7s forwards;
 }
 
-/* line 773, ../sass/app.scss */
+/* line 779, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9622,7 +9627,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 777, ../sass/app.scss */
+/* line 783, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9631,7 +9636,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 781, ../sass/app.scss */
+/* line 787, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9640,7 +9645,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 785, ../sass/app.scss */
+/* line 791, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9649,7 +9654,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 789, ../sass/app.scss */
+/* line 795, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9662,7 +9667,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 797, ../sass/app.scss */
+/* line 803, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 0.5s forwards;
   -moz-animation: fadeInAndUp 0.5s forwards;
@@ -9675,7 +9680,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.08, 1.27);
 }
 
-/* line 805, ../sass/app.scss */
+/* line 811, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9691,7 +9696,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 816, ../sass/app.scss */
+/* line 822, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 4.6s forwards;
   -moz-animation: liButtonClickText 4.6s forwards;
@@ -9716,7 +9721,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 832, ../sass/app.scss */
+/* line 838, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9726,7 +9731,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 837, ../sass/app.scss */
+/* line 843, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9736,7 +9741,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 842, ../sass/app.scss */
+/* line 848, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9746,7 +9751,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 847, ../sass/app.scss */
+/* line 853, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9756,7 +9761,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 852, ../sass/app.scss */
+/* line 858, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
