--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8815,20 +8815,18 @@ body {
 /* ID SPECIFIC */
 /* line 107, ../sass/app.scss */
 #find-all {
-  background: url(../../../public/images/allparks.jpg) no-repeat left center;
+  background: url(../../../public/images/allparks.jpg) no-repeat;
   background-size: 100%;
-  background-position: center;
+  background-position: 100% 40%;
 }
 @media (min-width: 768px) {
   /* line 107, ../sass/app.scss */
   #find-all {
     width: 640px;
-    background-position-y: -200px;
-    /* to show trees in image */
   }
 }
 
-/* line 118, ../sass/app.scss */
+/* line 117, ../sass/app.scss */
 #find-parks-page {
   display: none;
   height: 100vh;
@@ -8842,7 +8840,7 @@ body {
   max-width: 100%;
 }
 
-/* line 130, ../sass/app.scss */
+/* line 129, ../sass/app.scss */
 #park-info-name {
   font-size: 22px;
   margin: 10px 0 5px 0;
@@ -8851,7 +8849,7 @@ body {
   line-height: 20px;
 }
 @media (min-width: 321px) {
-  /* line 130, ../sass/app.scss */
+  /* line 129, ../sass/app.scss */
   #park-info-name {
     font-size: 26px;
     margin: 20px 0 20px 0;
@@ -8859,58 +8857,58 @@ body {
   }
 }
 
-/* line 145, ../sass/app.scss */
+/* line 144, ../sass/app.scss */
 #park-info-etc {
   font-size: 20px;
   margin: 0 0 5px 0;
   padding: 5px 15px;
 }
-/* line 150, ../sass/app.scss */
+/* line 149, ../sass/app.scss */
 #park-info-etc a {
   color: #502d07;
   text-decoration: none;
 }
 @media (min-width: 321px) {
-  /* line 145, ../sass/app.scss */
+  /* line 144, ../sass/app.scss */
   #park-info-etc {
     margin: 10px 0 10px 0;
   }
 }
 
-/* line 162, ../sass/app.scss */
+/* line 161, ../sass/app.scss */
 #park-info-phonenumber a {
   color: #ababab;
 }
 
 /* GENERAL CLASSES */
-/* line 171, ../sass/app.scss */
+/* line 170, ../sass/app.scss */
 header {
   margin: 40px 30px;
 }
 
-/* line 175, ../sass/app.scss */
+/* line 174, ../sass/app.scss */
 .header-cont, .sub-header-cont {
   width: 640px;
   max-width: 100%;
   margin: 0 auto;
 }
-/* line 180, ../sass/app.scss */
+/* line 179, ../sass/app.scss */
 .header-cont svg, .sub-header-cont svg {
   width: 50px;
   height: 50px;
   float: left;
 }
 
-/* line 187, ../sass/app.scss */
+/* line 186, ../sass/app.scss */
 .sub-header-cont {
   padding: 10px 10px;
 }
-/* line 190, ../sass/app.scss */
+/* line 189, ../sass/app.scss */
 .sub-header-cont h2, .sub-header-cont h3 {
   color: #827a6c;
 }
 
-/* line 195, ../sass/app.scss */
+/* line 194, ../sass/app.scss */
 .title {
   letter-spacing: 2px;
   font-weight: 700;
@@ -8926,7 +8924,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 195, ../sass/app.scss */
+  /* line 194, ../sass/app.scss */
   .title {
     font-size: 36px;
     padding: 0 0 0 30px;
@@ -8934,7 +8932,7 @@ header {
   }
 }
 
-/* line 213, ../sass/app.scss */
+/* line 212, ../sass/app.scss */
 .sub-title {
   letter-spacing: 1px;
   font-size: 23px;
@@ -8946,13 +8944,13 @@ header {
   transition: all 0.1s ease-in-out;
 }
 @media (min-width: 768px) {
-  /* line 213, ../sass/app.scss */
+  /* line 212, ../sass/app.scss */
   .sub-title {
     font-size: 30px;
   }
 }
 
-/* line 225, ../sass/app.scss */
+/* line 224, ../sass/app.scss */
 .description {
   font-size: 16px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8962,7 +8960,7 @@ header {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 230, ../sass/app.scss */
+/* line 229, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 15px;
@@ -8986,11 +8984,11 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 250, ../sass/app.scss */
+/* line 249, ../sass/app.scss */
 .reset-btn:active {
   opacity: .3;
 }
-/* line 254, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -8998,13 +8996,13 @@ header {
   top: 2px;
 }
 
-/* line 262, ../sass/app.scss */
+/* line 261, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 35%;
 }
 
-/* line 267, ../sass/app.scss */
+/* line 266, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 15px;
@@ -9028,12 +9026,12 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 286, ../sass/app.scss */
+/* line 285, ../sass/app.scss */
 .fire-btn:active {
   opacity: .3;
 }
 
-/* line 291, ../sass/app.scss */
+/* line 290, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9049,7 +9047,7 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 306, ../sass/app.scss */
+/* line 305, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9066,17 +9064,17 @@ header {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 322, ../sass/app.scss */
+/* line 321, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 326, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 331, ../sass/app.scss */
+/* line 330, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -9084,14 +9082,14 @@ header {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 331, ../sass/app.scss */
+  /* line 330, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 344, ../sass/app.scss */
+/* line 343, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9099,7 +9097,7 @@ header {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 344, ../sass/app.scss */
+  /* line 343, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9108,7 +9106,7 @@ header {
     display: inline-block;
   }
 }
-/* line 358, ../sass/app.scss */
+/* line 357, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9126,21 +9124,21 @@ header {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 374, ../sass/app.scss */
+  /* line 373, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 378, ../sass/app.scss */
+  /* line 377, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 381, ../sass/app.scss */
+  /* line 380, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 389, ../sass/app.scss */
+/* line 388, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
@@ -9152,20 +9150,20 @@ header {
   background-position: left center;
   background-repeat: no-repeat;
 }
-/* line 395, ../sass/app.scss */
+/* line 394, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 398, ../sass/app.scss */
+/* line 397, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 402, ../sass/app.scss */
+/* line 401, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 407, ../sass/app.scss */
+/* line 406, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9181,7 +9179,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 418, ../sass/app.scss */
+/* line 417, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9191,25 +9189,25 @@ header {
   background-color: #fff;
 }
 
-/* line 427, ../sass/app.scss */
+/* line 426, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 432, ../sass/app.scss */
+/* line 431, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 432, ../sass/app.scss */
+  /* line 431, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 441, ../sass/app.scss */
+/* line 440, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9218,12 +9216,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 441, ../sass/app.scss */
+  /* line 440, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 452, ../sass/app.scss */
+/* line 451, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9244,13 +9242,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 452, ../sass/app.scss */
+  /* line 451, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 472, ../sass/app.scss */
+/* line 471, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9259,7 +9257,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 477, ../sass/app.scss */
+/* line 476, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9270,24 +9268,24 @@ header {
   color: #502d07;
 }
 
-/* line 490, ../sass/app.scss */
+/* line 489, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 494, ../sass/app.scss */
+/* line 493, ../sass/app.scss */
 .park-selected-official {
   border: 4px solid #502d07 !important;
   opacity: 1;
 }
 @media all and (min-width: 768px) {
-  /* line 494, ../sass/app.scss */
+  /* line 493, ../sass/app.scss */
   .park-selected-official {
     border: 6px solid #502d07 !important;
   }
 }
 
-/* line 503, ../sass/app.scss */
+/* line 502, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9306,23 +9304,23 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 517, ../sass/app.scss */
+/* line 516, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 521, ../sass/app.scss */
+/* line 520, ../sass/app.scss */
 .park-info-cont ul {
   padding: 0 15px;
   margin: 0;
   color: #502d07;
 }
-/* line 526, ../sass/app.scss */
+/* line 525, ../sass/app.scss */
 .park-info-cont ul li {
   display: block;
 }
 
-/* line 533, ../sass/app.scss */
+/* line 532, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9330,12 +9328,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 533, ../sass/app.scss */
+  /* line 532, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 543, ../sass/app.scss */
+/* line 542, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9345,28 +9343,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 543, ../sass/app.scss */
+  /* line 542, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 555, ../sass/app.scss */
+/* line 554, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 559, ../sass/app.scss */
+/* line 558, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 559, ../sass/app.scss */
+  /* line 558, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 569, ../sass/app.scss */
+/* line 568, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9381,7 +9379,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 583, ../sass/app.scss */
+/* line 582, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9390,7 +9388,7 @@ header {
   bottom: 0;
 }
 
-/* line 591, ../sass/app.scss */
+/* line 590, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9409,24 +9407,24 @@ header {
   opacity: .9;
 }
 @media (min-width: 768px) {
-  /* line 591, ../sass/app.scss */
+  /* line 590, ../sass/app.scss */
   .chosen-park-list {
     right: 2%;
   }
 }
-/* line 613, ../sass/app.scss */
+/* line 612, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 10px 10px 40px;
 }
 @media (min-width: 768px) {
-  /* line 613, ../sass/app.scss */
+  /* line 612, ../sass/app.scss */
   .chosen-park-list ul {
     padding: 10px 0 10px 40px;
   }
 }
-/* line 623, ../sass/app.scss */
+/* line 622, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9435,7 +9433,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 633, ../sass/app.scss */
+/* line 632, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9450,7 +9448,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 643, ../sass/app.scss */
+/* line 642, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9460,7 +9458,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 653, ../sass/app.scss */
+/* line 652, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9472,18 +9470,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 660, ../sass/app.scss */
+/* line 659, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: 60px;
 }
-/* line 665, ../sass/app.scss */
+/* line 664, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 670, ../sass/app.scss */
+/* line 669, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9494,7 +9492,7 @@ header {
   opacity: 0;
 }
 
-/* line 684, ../sass/app.scss */
+/* line 683, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9509,7 +9507,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 694, ../sass/app.scss */
+/* line 693, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9519,7 +9517,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 704, ../sass/app.scss */
+/* line 703, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: 35px;
@@ -9534,21 +9532,21 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 715, ../sass/app.scss */
+/* line 714, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 721, ../sass/app.scss */
+/* line 720, ../sass/app.scss */
 .image-bullet-point {
   width: 16px;
   margin-left: 10px;
   margin-top: -3px;
 }
 
-/* line 727, ../sass/app.scss */
+/* line 726, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9556,7 +9554,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 739, ../sass/app.scss */
+/* line 738, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9566,7 +9564,7 @@ footer {
   opacity: 0;
 }
 
-/* line 744, ../sass/app.scss */
+/* line 743, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9576,17 +9574,17 @@ footer {
   opacity: 1;
 }
 
-/* line 749, ../sass/app.scss */
+/* line 748, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 753, ../sass/app.scss */
+/* line 752, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 757, ../sass/app.scss */
+/* line 756, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9597,7 +9595,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 763, ../sass/app.scss */
+/* line 762, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9609,7 +9607,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 775, ../sass/app.scss */
+/* line 774, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.7s forwards;
   -moz-animation: zoomAni 0.7s forwards;
@@ -9618,7 +9616,7 @@ footer {
   animation: zoomAni 0.7s forwards;
 }
 
-/* line 779, ../sass/app.scss */
+/* line 778, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9627,7 +9625,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 783, ../sass/app.scss */
+/* line 782, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9636,7 +9634,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 787, ../sass/app.scss */
+/* line 786, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9645,7 +9643,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 791, ../sass/app.scss */
+/* line 790, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9654,7 +9652,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 795, ../sass/app.scss */
+/* line 794, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9667,7 +9665,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 803, ../sass/app.scss */
+/* line 802, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 0.5s forwards;
   -moz-animation: fadeInAndUp 0.5s forwards;
@@ -9680,7 +9678,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.08, 1.27);
 }
 
-/* line 811, ../sass/app.scss */
+/* line 810, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9696,7 +9694,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 822, ../sass/app.scss */
+/* line 821, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 4.6s forwards;
   -moz-animation: liButtonClickText 4.6s forwards;
@@ -9721,7 +9719,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 838, ../sass/app.scss */
+/* line 837, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9731,7 +9729,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 843, ../sass/app.scss */
+/* line 842, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9741,7 +9739,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 848, ../sass/app.scss */
+/* line 847, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9751,7 +9749,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 853, ../sass/app.scss */
+/* line 852, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9761,7 +9759,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 858, ../sass/app.scss */
+/* line 857, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
